<resources>
    <string name="app_name">Parkinger</string>
    <string name="title_activity_maps">MapsActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="already_have_account_login">Already have account? Login</string>
    <string name="don_t_have_account_register">Don\'t have account? Register</string>
    <string name="logout">Logout</string>
    <string name="skip_for_now"><![CDATA[Skip for now >]]></string>
    <string name="Parkinger">AppLogo</string>
    <string name="parkinger">Parkinger</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="full_name">Full Name</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="find_parking">Find Parking</string>
    <string name="your_bookings">Your Bookings</string>
    <string name="forget_password">Forget Password</string>
    <string name="reset_password">reset password</string>
    <string name="go_back_to_login">Go back to Login</string>
    <string name="pass_forget">Forgot Password?</string>
    <string name="book_spot">Book this spot ➜</string>
    <string name="open_in_google_maps">Open in Google Maps ➜</string>
    <string name="pay_now_with_google_pay">Pay now with Google Pay ➜</string>
    <string name="pay_at_parking">Pay at Parking ➜</string>
    <string name="car_number_e_g_hr26aa1234">e.g. HR26AA1234</string>
    <string name="book_parking_slot">Book Parking Slot</string>
    <string name="pay">Pay</string>
    <string name="payment">Payment</string>
    <string name="qr_code">QR Code</string>
    <string name="regenerate_qr">QR not working, Regenerate?</string>
    <string name="scan_this_qr_code_at_parking">Scan this QR code at parking</string>
    <string name="open_mail_app">Open mail app</string>
    <string name="don_t_remember_email_n_register_an_account">Don\'t remember email?\nRegister new account</string>
    <string name="delete_your_account">Delete your account?</string>
    <string name="admin_nlogin">Admin Login</string>
    <string name="go_to_user_login">Go to User Login</string>
    <string name="go_to_admin_login">• Admin panel login •</string>
    <string name="no_internet_connection_available">No internet connection available</string>
    <string name="add_parking_spots">Add parking Spots</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="parking_name">Parking name</string>
    <string name="parking_price_in">Parking price (in ₹)</string>
    <string name="parking_timings_opening_hours">Parking timings (Opening hours)</string>
    <string name="slots_available_in_parking">Slots available in parking</string>
    <string name="admin_page">• Admin Panel •</string>
    <string name="add_parking">Add Parking</string>
    <string name="pay_now_with_upi">Pay now ➜</string>
</resources>