<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="25dp"
    tools:context=".ForgetActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/forget_password"
        android:textSize="25sp"
        android:textStyle="bold|italic" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/authFailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textColor="@color/design_default_color_error"
        android:textSize="12sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/authPassText"
        android:textColor="#4CAF50"
        android:textStyle="bold"
        android:textSize="12sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_marginTop="-10dp"
        android:gravity="center"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:indeterminate="true"
        android:indeterminateTint="@color/material_dynamic_neutral60"
        style="?android:attr/progressBarStyleHorizontal"/>
    <TextView
        android:id="@+id/goToRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="end"
        android:text="@string/don_t_remember_email_n_register_an_account"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnOpenMailApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_mail_app"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        android:textAllCaps="true"/>

    <Button
        android:id="@+id/btn_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:visibility="gone"
        android:layout_marginTop="20dp"
        android:textAllCaps="true"/>

    <TextView
        android:id="@+id/goBackToLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="end"
        android:text="@string/go_back_to_login"
        android:textSize="15sp"
        android:textStyle="bold" />


</LinearLayout>