<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="25dp"
    tools:context=".adminLogin">

    <TextView
        android:textSize="14sp"
        android:textStyle="italic"
        android:layout_gravity="end"
        android:textColor="@color/quantum_grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin_page"
        android:background="@drawable/bg_admin"
        android:textAllCaps="true"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/admin_nlogin"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/adminEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"/>



    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/adminPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/adminAuthFailText"
        android:textColor="@color/design_default_color_error"
        android:textStyle="bold"
        android:textSize="12sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_marginTop="10dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/adminAuthPassText"
        android:textColor="#4CAF50"
        android:textStyle="bold"
        android:textSize="12sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_marginTop="-14dp"
        android:gravity="center"/>

    <ProgressBar
        android:id="@+id/adminProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:indeterminate="true"
        android:indeterminateTint="@color/material_dynamic_neutral60"
        style="?android:attr/progressBarStyleHorizontal"/>

<!--    <TextView-->
<!--        android:id="@+id/adminForgetPassword"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:gravity="end"-->
<!--        android:text="@string/pass_forget"-->
<!--        android:textSize="15sp"-->
<!--        android:textStyle="bold" />-->


    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/adminLoginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textAllCaps="true"
        />

    <TextView
        android:id="@+id/userLoginActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="end"
        android:text="@string/go_to_user_login"
        android:textSize="16sp"
        android:textStyle="bold" />


</LinearLayout>