<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".UpiActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/payment"
        android:gravity="center"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        android:layout_marginBottom="50dp"/>

    <TextView
        android:id="@+id/ParkingName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:textSize="17sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/ParkingPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/carNumberForQR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/noAppFound"
        android:textColor="@color/design_default_color_error"
        android:textStyle="bold"
        android:textSize="12sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_marginTop="10dp"
        android:gravity="center"/>

    <Button
        android:id="@+id/payBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/pay"
        android:textSize="15sp"
        android:textAllCaps="true"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/noInternetLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:background="#000000"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_internet_connection_available"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:padding="10dp" />

    </LinearLayout>


</LinearLayout>